--- a/Dialogs/AuthorizeDialog.xaml
+++ b/Dialogs/AuthorizeDialog.xaml
@@ -28,13 +28,13 @@
         <TextBlock Name="Summary" Grid.Row="0" Grid.ColumnSpan="2" Visibility="Collapsed" Foreground="Red" TextWrapping="Wrap" />
 
         <TextBlock Text="Сервер" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Margin="0 10 0 0"/>
-        <AutoSuggestBox QueryIcon="Find" x:Name="Host" Margin="0 10 0 0" Grid.Row="1" Grid.Column="1" Text="" TextChanged="Host_TextChanged" SuggestionChosen="Host_SuggestionChosen" />
+        <AutoSuggestBox QueryIcon="Find" x:Name="Host" Margin="0 10 0 0" Grid.Row="1" Grid.Column="1" Text="192.168.1.53" TextChanged="Host_TextChanged" SuggestionChosen="Host_SuggestionChosen" />
 
         <TextBlock Text="База данных" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" Margin="0 10 0 0"/>
-        <AutoSuggestBox QueryIcon="Find" x:Name="DbName" Margin="0 10 0 0" Grid.Row="2" Grid.Column="1" Text="" TextChanged="DbName_TextChanged" SuggestionChosen="DbName_SuggestionChosen" />
+        <AutoSuggestBox QueryIcon="Find" x:Name="DbName" Margin="0 10 0 0" Grid.Row="2" Grid.Column="1" Text="vnext-bot" TextChanged="DbName_TextChanged" SuggestionChosen="DbName_SuggestionChosen" />
 
         <TextBlock Text="Логин" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" Margin="0 10 0 0"/>
-        <TextBox x:Name="Login" Margin="0 10 0 0" Grid.Row="3" Grid.Column="1" Text="" />
+        <TextBox x:Name="Login" Margin="0 10 0 0" Grid.Row="3" Grid.Column="1" Text="mobnius" />
 
         <TextBlock Text="Пароль" Grid.Row="4" Grid.Column="0" VerticalAlignment="Center" Margin="0 10 0 0" />
         <Grid Grid.Row="4" Grid.Column="1" Margin="0 10 0 0">
@@ -47,7 +47,7 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
-            <PasswordBox x:Name="Password" Grid.Row="0" Grid.Column="0" Password="" PasswordRevealMode="Hidden" VerticalAlignment="Center" />
+            <PasswordBox x:Name="Password" Grid.Row="0" Grid.Column="0" Password="mobnius-0" PasswordRevealMode="Hidden" VerticalAlignment="Center" />
             <Button x:Name="PasswordVisible" Background="#2196f3" Foreground="White" Margin="10 0 0 0" Grid.Row="0" Grid.Column="1" Content="&#xE7B3;" FontFamily="Segoe MDL2 Assets" FontSize="26" Padding="0" Click="PasswordVisible_Click" />
         </Grid>
 
