--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="RpcSecurity.app.App"
+    x:Class="vNextBot.app.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:RpcSecurity.app"
+    xmlns:local="using:vNextBot.app"
     RequestedTheme="Light">
 
     <Application.Resources>
