--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="RpcSecurity.app.MainPage"
+    x:Class="vNextBot.app.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:RpcSecurity.app"
+    xmlns:local="using:vNextBot.app"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -59,10 +59,10 @@
                             <TextBlock Style="{StaticResource MenuItemText}" Text="Настройки" />
                         </StackPanel>
                     </ListBoxItem>
-                    <ListBoxItem Name="update">
+                    <ListBoxItem Name="accounts">
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock Style="{StaticResource MenuItemIcon}" Text="&#xE72C;" />
-                            <TextBlock Style="{StaticResource MenuItemText}" Text="Обновление" />
+                            <TextBlock Style="{StaticResource MenuItemIcon}" Text="&#xEA4A;" />
+                            <TextBlock Style="{StaticResource MenuItemText}" Text="Аккаунты" />
                         </StackPanel>
                     </ListBoxItem>
                     <ListBoxItem Name="help">
