--- a/SettingPage.xaml
+++ b/SettingPage.xaml
@@ -1,9 +1,9 @@
 ﻿<Page
-    x:Class="RpcSecurity.app.SettingPage"
+    x:Class="vNextBot.app.SettingPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local11="using:RpcSecurity.Model"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local11="using:vNextBot.Model"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -26,7 +26,6 @@
     <Grid Background="#ECEFF1">
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
-            <ColumnDefinition Width="600"/>
         </Grid.ColumnDefinitions>
         
         <Grid.RowDefinitions>
@@ -39,32 +38,11 @@
                 <ColumnDefinition Width="200" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="200" />
             </Grid.ColumnDefinitions>
 
             <ComboBox Grid.Column="0" Width="190" PlaceholderText="Настройка" x:Name="SettingType" Margin="10 0 0 0" SelectionChanged="SettingType_SelectionChanged" VerticalAlignment="Center" />
 
-            <Button Style="{StaticResource ButtonStyle}" Background="#f44336" Grid.Column="2" x:Name="AddUrlBtn" Content="Добавить адрес сайта" HorizontalAlignment="Center" Click="AddUrlBtn_Click" Visibility="Collapsed">
-                <ToolTipService.ToolTip>
-                    <TextBlock Text="Добавить адрес сайта" />
-                </ToolTipService.ToolTip>
-            </Button>
-
-            <Button Style="{StaticResource ButtonStyle}" Background="#f44336" Grid.Column="3"  Margin="10 0 0 0" x:Name="AddWebTokenBtn" Content="Обновить Web Token" HorizontalAlignment="Center" Click="AddWebTokenBtn_Click" Visibility="Collapsed">
-                <ToolTipService.ToolTip>
-                    <TextBlock Text="Обновить Web Token" />
-                </ToolTipService.ToolTip>
-            </Button>
-
-            <Button Style="{StaticResource ButtonStyle}" Background="#f44336" Grid.Column="4"  Margin="10 0 0 0" x:Name="AddBirthDayBtn" Content="Установить дату создания" HorizontalAlignment="Center" Click="AddBirthDayBtn_Click" Visibility="Collapsed">
-                <ToolTipService.ToolTip>
-                    <TextBlock Text="Установить дату создания" />
-                </ToolTipService.ToolTip>
-            </Button>
-
-            <Button Style="{StaticResource ButtonStyle}" Grid.Column="5" x:Name="AddSettingBtn" Content="Создать новую настройку" HorizontalAlignment="Center" Click="AddSettingBtn_Click">
+            <Button Style="{StaticResource ButtonStyle}" Grid.Column="2" x:Name="AddSettingBtn" Margin="0 0 10 0" Content="Создать новую настройку" HorizontalAlignment="Center" Click="AddSettingBtn_Click">
                 <ToolTipService.ToolTip>
                     <TextBlock Text="Создать новую настройку" />
                 </ToolTipService.ToolTip>
@@ -81,20 +59,20 @@
                 <Border BorderThickness="0 0 0 1" BorderBrush="Gray" Grid.Row="0" Background="#64b5f6">
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="300" />
-                            <ColumnDefinition Width="200" />
-                            <ColumnDefinition Width="200" />
                             <ColumnDefinition Width="100" />
+                            <ColumnDefinition Width="150" />
+                            <ColumnDefinition Width="400" />
+                            <ColumnDefinition Width="400" />
                         </Grid.ColumnDefinitions>
 
-                        <TextBlock Text="Наименование" Grid.Column="0" Style="{StaticResource TableHeaderStyle}" />
+                        <TextBlock Text="Тип" Grid.Column="0" Style="{StaticResource TableHeaderStyle}" />
                         <TextBlock Text="Ключ" Grid.Column="1" Style="{StaticResource TableHeaderStyle}" />
                         <TextBlock Text="Значение" Grid.Column="2"  Style="{StaticResource TableHeaderStyle}" />
-                        <TextBlock Text="Тип" Grid.Column="3" Style="{StaticResource TableHeaderStyle}" />
+                        <TextBlock Text="Описание" Grid.Column="3" Style="{StaticResource TableHeaderStyle}" />
                     </Grid>
                 </Border>
 
-                <ListView Name="SettingList" Grid.Row="1" SelectionMode="Single" DoubleTapped="SettingList_DoubleTapped" Tapped="SettingList_Tapped" IsItemClickEnabled="True">
+                <ListView Name="SettingList" Grid.Row="1" SelectionMode="Single" DoubleTapped="SettingList_DoubleTapped" IsItemClickEnabled="True">
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="local11:Setting">
                             <Grid RightTapped="Grid_RightTapped" VerticalAlignment="Stretch">
@@ -105,85 +83,21 @@
                                 </FlyoutBase.AttachedFlyout>
 
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="300" />
-                                    <ColumnDefinition Width="200" />
-                                    <ColumnDefinition Width="200" />
                                     <ColumnDefinition Width="100" />
+                                    <ColumnDefinition Width="150" />
+                                    <ColumnDefinition Width="400" />
+                                    <ColumnDefinition Width="400" />
                                 </Grid.ColumnDefinitions>
 
-                                <TextBlock Text="{x:Bind c_label}" Foreground="{x:Bind getTextColor()}" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap" />
-                                <TextBlock Text="{x:Bind c_key}" Foreground="{x:Bind getTextColor()}" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" />
-                                <TextBlock Text="{x:Bind c_value}" Foreground="{x:Bind getTextColor()}" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                <TextBlock Text="{x:Bind TypeName}" Foreground="{x:Bind getTextColor()}" Grid.Column="3" HorizontalAlignment="Right" VerticalAlignment="Center" />
+                                <TextBlock Text="{x:Bind TypeName}" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                                <TextBlock Text="{x:Bind c_key}" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                                <TextBlock Text="{x:Bind c_value}" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                                <TextBlock Text="{x:Bind c_summary}" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap" />
                             </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
             </Grid>
         </ScrollViewer>
-
-        <Border Background="#03a9f4" Grid.Row="0" Grid.Column="1" BorderBrush="White" BorderThickness="1 0 0 0">
-            <TextBlock Text="Переопределения" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontSize="24" />
-        </Border>
-
-        <Grid Grid.Row="1" Grid.Column="1" Background="#ffffff">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition />
-            </Grid.RowDefinitions>
-
-            <TextBlock Name="OverrideSummary" Grid.Row="0" Visibility="Collapsed" Foreground="Gray" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center" />
-
-            <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Visible">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="40" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-
-                    <Border BorderThickness="0 0 0 1" BorderBrush="Gray" Grid.Row="0" Background="#83c3f7">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="100" />
-                                <ColumnDefinition Width="200" />
-                                <ColumnDefinition Width="100" />
-                                <ColumnDefinition Width="170" />
-                            </Grid.ColumnDefinitions>
-
-                            <TextBlock Text="Значение" Grid.Column="0" Style="{StaticResource TableHeaderStyle}" />
-                            <TextBlock Text="Division/Район" Grid.Column="1" Style="{StaticResource TableHeaderStyle}" />
-                            <TextBlock Text="Роль" Grid.Column="2"  Style="{StaticResource TableHeaderStyle}" />
-                            <TextBlock Text="Пользователь" Grid.Column="3" Style="{StaticResource TableHeaderStyle}" />
-                        </Grid>
-                    </Border>
-
-                    <ListView Name="OverrideSettingList" Grid.Row="1" SelectionMode="Single" DoubleTapped="SettingList_DoubleTapped" IsItemClickEnabled="True">
-                        <ListView.ItemTemplate>
-                            <DataTemplate x:DataType="local11:Setting">
-                                <Grid RightTapped="Grid_RightTapped" VerticalAlignment="Stretch">
-                                    <FlyoutBase.AttachedFlyout>
-                                        <MenuFlyout>
-                                            <MenuFlyoutItem x:Name="ItemDelete" Text="Удалить" Click="OverrideItemDelete_Click"/>
-                                        </MenuFlyout>
-                                    </FlyoutBase.AttachedFlyout>
-
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="100" />
-                                        <ColumnDefinition Width="200" />
-                                        <ColumnDefinition Width="100" />
-                                        <ColumnDefinition Width="170" />
-                                    </Grid.ColumnDefinitions>
-
-                                    <TextBlock Text="{x:Bind c_value}" Foreground="{x:Bind getTextColor()}" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap" />
-                                    <TextBlock Text="{x:Bind DivisionName}" Foreground="{x:Bind getTextColor()}" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" />
-                                    <TextBlock Text="{x:Bind RoleName}" Foreground="{x:Bind getTextColor()}" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                    <TextBlock Text="{x:Bind UserName}" Foreground="{x:Bind getTextColor()}" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                </Grid>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-                </Grid>
-            </ScrollViewer>
-        </Grid>
     </Grid>
 </Page>
