--- a/Dialogs/UserItemDialog.xaml
+++ b/Dialogs/UserItemDialog.xaml
@@ -33,7 +33,7 @@
         <TextBlock Name="Summary" Grid.Row="0" Grid.ColumnSpan="2" Visibility="Collapsed" Foreground="Red" TextWrapping="Wrap" />
 
         <TextBlock Text="Логин" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center"/>
-        <TextBox x:Name="Login" Margin="0 10 0 0" Grid.Row="1" Grid.Column="1" IsReadOnly="True" />
+        <TextBox x:Name="Login" Margin="0 10 0 0" Grid.Row="1" Grid.Column="1" />
 
         <TextBlock Text="ФИО" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center"/>
         <TextBox x:Name="FIO" Margin="0 10 0 0" Grid.Row="2" Grid.Column="1" />
